# flake8-soft-keywords

./: Makefile  README.md  pyproject.toml
_examples/: 00bad.py  01good.py
src/flake8_soft_keywords/: __init__.py
