[tool.poetry]
name = "flake8-soft-keywords"
version = "0.1.0"
description = ""
authors = ["podhmo <ababjam61+github@gmail.com>"]
readme = "README.md"
packages = [{include = "flake8_soft_keywords", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[tool.poetry.plugins]

[tool.poetry.plugins."flake8.extension"]
"SK0" = "flake8_soft_keywords:Checker"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
